--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Golang
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -12,4 +14,29 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+
+# React
+
+# dependencies
+node_modules
+.pnp
+.pnp.js
+
+# testing
+coverage
+
+# production
+build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
