--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -1,5 +1,8 @@
 {
-    "useTabs": true,
-    "tabWidth": 4,
-    "printWidth": 120
+	"useTabs": true,
+	"trailingComma": "all",
+	"semi": false,
+	"singleQuote": true,
+	"tabWidth": 4,
+	"printWidth": 120
 }
