--- a/web/package.json
+++ b/web/package.json
@@ -1,33 +1,51 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "web",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@chakra-ui/core": "^0.8.0",
+		"@emotion/core": "^10.0.28",
+		"@emotion/styled": "^10.0.27",
+		"emotion-theming": "^10.0.27",
+		"history": "^5.0.0",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-router-dom": "^6.0.0-beta.0"
+	},
+	"scripts": {
+		"parcel-cleanup": "rm -R dist .parcel-cache",
+		"start": "npm run parcel-cleanup && parcel serve ./src/index.html",
+		"watch": "npm run parcel-cleanup && parcel watch ./src/index.html",
+		"build": "npm run parcel-cleanup && parcel build ./src/index.html"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@babel/core": "^7.11.1",
+		"@babel/preset-react": "^7.10.4",
+		"@types/react": "^16.9.44",
+		"eslint": "6.8.0",
+		"eslint-config-airbnb-base": "14.1.0",
+		"eslint-config-prettier": "6.11.0",
+		"eslint-plugin-import": "2.20.2",
+		"eslint-plugin-jsx-a11y": "6.2.3",
+		"eslint-plugin-react": "7.19.0",
+		"eslint-plugin-simple-import-sort": "5.0.2",
+		"eslint-plugin-sort-requires": "2.1.0",
+		"parcel": "^2.0.0-beta.1",
+		"prettier": "2.0.2"
+	}
 }
