--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ vendor/
 
 pkged.go
 
-
 # React
 
 # dependencies
@@ -43,3 +42,7 @@ dist
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# Both
+.env
